Bug/385 (#386)
* Update position of footer bar

Changed the position such that it is pinned to the bottom of the page

#385

* Update position of footer bar on main page

Footer was showing pinned to the bottom of the content rather than the page

#385

* Update position of elements on main page

Set nav bar to be inline-block, and add padding to content such that the page is the correct size

#385

* Code review changes

Removed horizontal scroll, updated position of elements on main page, changed height of side bar to match with footer bar

#385

* Code review changes

Modified spacing of elements on main page which were overlapping the footer bar

#385

* Modify side panel height

Calculate side panel height upon opening panel, and set height

#385

--- a/Spore/front/src/app/components/main-page/main-page.component.scss
+++ b/Spore/front/src/app/components/main-page/main-page.component.scss
@@ -1,12 +1,10 @@
 @import '../../../assets/styles/spore-colors';
 
 #main {
-  margin-top: 65px;
   transition: margin-left .5s;
-  padding: 20px;
+  padding: 20px 20px 20px 0;
 }
 .sidenav {
-  height: 90vh; /* 50% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
